--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,45 @@
+:root {
+  --bg-primary: #022927;
+  --bg-btn-primary: #69a762;
+  --bg-btn-primary-hover: #aad169;
+
+  --fg-primary: #eefcfb;
+  --fg-link: #aad169;
+  --fg-link-hover: #f9f871;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+
+  font-size: 1rem !important;
+  font-weight: normal;
+  font-family: Arial, sans-serif;
+
+  color: var(--fg-primary) !important;
+  background-color: var(--bg-primary) !important;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+button {
+  margin: 0;
+  padding: 0;
+
+  font-size: inherit;
+  font-family: inherit;
+  font-weight: normal;
+
+  color: inherit;
+  background: none;
+  border: 0;
+  outline: 0;
+}
+
+a {
+  color: inherit !important;
+  text-decoration: none !important;
 }
 
 code {
