--- a/src/pages/Register/register.css
+++ b/src/pages/Register/register.css
@@ -1,9 +1,8 @@
 .centered-form-wrapper {
   display: flex;
-  height: 100vh;
-
   align-items: center;
   justify-content: center;
+  padding: 25px 0;
 }
 
 .form-logo {
