--- a/src/components/Header/MyHeader.css
+++ b/src/components/Header/MyHeader.css
@@ -3,6 +3,10 @@
   box-shadow: 0 1px 8px 0 var(--box-shadow-color);
 }
 
+.user-info {
+  font-size: 1.1rem;
+}
+
 .logo-title {
   font-size: 1.5rem;
   font-weight: bold;
